# alternativez.py

./: .gitlab-ci.yml  ReadMe.md  alternativez.py  pyproject.toml
tests/: tests.py
